--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -186,3 +186,20 @@
 .hover-scale:hover {
   transform: scale(1.03);
 }
+
+*{
+  scroll-behavior: smooth;
+}
+
+img {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+  -webkit-user-drag: none;
+  user-drag: none;
+}
+/* -webkit-tap-highlight-color: rgba(255, 255, 255, 0); */
